// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab can apply custom styling 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "padding": 12,
      },
      Object {
        "backgroundColor": "hsl(190, 95%, 30%)",
      },
      null,
      null,
      Array [
        Object {
          "backgroundColor": "hsl(210, 5%, 94%)",
          "borderTopColor": "hsl(210, 5%, 87%)",
          "borderTopWidth": 2,
          "flexBasis": 0,
          "flexGrow": 1,
          "padding": 12,
        },
        null,
        null,
        Object {
          "backgroundColor": "lavender",
          "borderTopColor": "rebeccapurple",
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "hsl(0, 0%, 100%)",
          "fontSize": 16,
          "fontWeight": "700",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
          null,
        ],
      ]
    }
  >
    Styled Tab
  </Text>
</View>
`;

exports[`Tab renders as expected when Tab is selected 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "padding": 12,
      },
      Object {
        "backgroundColor": "hsl(190, 95%, 30%)",
      },
      null,
      null,
      Array [
        Object {
          "backgroundColor": "hsl(210, 5%, 94%)",
          "borderTopColor": "hsl(210, 5%, 87%)",
          "borderTopWidth": 2,
          "flexBasis": 0,
          "flexGrow": 1,
          "padding": 12,
        },
        Object {
          "opacity": 1,
        },
        Object {
          "backgroundColor": "hsl(0, 0%, 100%)",
          "borderTopColor": "hsl(190, 95%, 30%)",
          "color": "hsl(190, 95%, 30%)",
        },
        null,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "hsl(0, 0%, 100%)",
          "fontSize": 16,
          "fontWeight": "700",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
            "borderTopColor": "hsl(190, 95%, 30%)",
            "color": "hsl(190, 95%, 30%)",
          },
        ],
      ]
    }
  >
    Selected Tab
  </Text>
</View>
`;

exports[`Tab renders as expected with a component passed as children 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "padding": 12,
      },
      Object {
        "backgroundColor": "hsl(190, 95%, 30%)",
      },
      null,
      null,
      Array [
        Object {
          "backgroundColor": "hsl(210, 5%, 94%)",
          "borderTopColor": "hsl(210, 5%, 87%)",
          "borderTopWidth": 2,
          "flexBasis": 0,
          "flexGrow": 1,
          "padding": 12,
        },
        null,
        null,
        null,
      ],
    ]
  }
>
  <Text>
    Text component
  </Text>
</View>
`;

exports[`Tab renders default Tab as expected 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "padding": 12,
      },
      Object {
        "backgroundColor": "hsl(190, 95%, 30%)",
      },
      null,
      null,
      Array [
        Object {
          "backgroundColor": "hsl(210, 5%, 94%)",
          "borderTopColor": "hsl(210, 5%, 87%)",
          "borderTopWidth": 2,
          "flexBasis": 0,
          "flexGrow": 1,
          "padding": 12,
        },
        null,
        null,
        null,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "hsl(0, 0%, 100%)",
          "fontSize": 16,
          "fontWeight": "700",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
          null,
        ],
      ]
    }
  >
    Default Tab
  </Text>
</View>
`;
